sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry__mdt/SFDC_Industry__mdt.object-meta.xml
<CustomObject>
    <description>Salesforce Industries clouds available for running transition assessments and upgrade automation</description>
    <label>SFDC Industry</label>
    <pluralLabel>SFDC Industry</pluralLabel>
</CustomObject>