sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry__mdt/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <label>Package Version</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>