sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>